--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,6 +27,93 @@ header {
   position: relative;
 }
 
+/* Navigation */
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 12rem;
+  padding: 0 15rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* Logo */
+.logo {
+  display: flex;
+  flex-direction: column;
+}
+
+.logo span:nth-child(1) {
+  font-family: "Mooli", cursive;
+  font-size: 3rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.logo span:nth-child(1) span {
+  display: inline-block;
+  font-size: 1.8rem;
+  transform: translateY(-0.8rem);
+}
+
+.logo span:nth-child(2) {
+  display: inline-block;
+  font-family: 'Croissant One', cursive;
+  font-size: 1.5rem;
+  color: #ddd;
+  letter-spacing: .1rem;
+  text-align: right;
+  transform: translate(2.2rem, -1rem);
+}
+
+.logo span {
+  text-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+/* Nav Items */
+.nav-items {
+  width: 50%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.nav-items {
+  list-style: none;
+  align-items: center;
+}
+
+.nav-link {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.1rem;
+  text-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+.nav-btn {
+  width: 13rem;
+  height: 5rem;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4rem;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  font-size: 2rem;
+  letter-spacing: .1rem;
+  color: #f8834f;
+  text-transform: uppercase;
+  transition: transform 0.3s;
+}
+
+.nav-btn:hover {
+  transform: translateY(-.2rem);
+}
 /* Banner */
 .banner {
   position: absolute;
