Creating html and styling first navigation drop down

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -80,11 +80,12 @@ header {
   width: 50%;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 
-.nav-items {
+.nav-item {
   list-style: none;
-  align-items: center;
+  position: relative;
 }
 
 .nav-link {
@@ -93,6 +94,64 @@ header {
   color: #fff;
   letter-spacing: 0.1rem;
   text-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
+
+/* Dropdown 1*/
+.dropdown-1 {
+  position: absolute;
+  top: 4.9rem;
+  left: -24rem;
+  background-color: #fff;
+  width: 96rem;
+  height: 60rem;
+  display: flex;
+  border-radius: 1rem;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
+  padding: 2rem;
+}
+
+.dropdown-1-left {
+  width: 50%;
+  padding-right: 4rem;
+}
+
+.dropdown-1-right {
+  width: 70%;
+  padding-left: 2rem;
+}
+
+.dropdown-1-left h3, .dropdown-1-right h3{
+font-family: 'Mooli', cursive;
+font-size: 1.8rem;
+color: #8698a7;
+padding-bottom: 1rem;
+margin-bottom: 3rem;
+border-bottom: .2rem solid rgba(134, 152, 167, 0.5);
+}
+
+.features-list-item {
+  margin: 1.5rem 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.features-list-item i {
+  font-size: 2rem;
+  width: 4rem;
+  color: #8698a7;
+  transition: color 0.3s;
+}
+
+.features-list-item span {
+  font-size: 1.8rem;
+  color: #8698a7;
+  transition: color 0.3s;
+}
+
+.features-list-item:hover i, .features-list-item:hover span {
+ color: #222;
+
 }
 
 .nav-btn {
