--- a/CSS/style.css
+++ b/CSS/style.css
@@ -111,7 +111,7 @@ header {
 }
 
 .dropdown-1-left {
-  width: 50%;
+  width: 30%;
   padding-right: 4rem;
 }
 
@@ -151,7 +151,137 @@ border-bottom: .2rem solid rgba(134, 152, 167, 0.5);
 
 .features-list-item:hover i, .features-list-item:hover span {
  color: #222;
+}
 
+.dropdown-services {
+  height: 45rem;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.dropdown-service {
+  display:  flex;
+  align-items: center;
+  margin-bottom: 3.5rem;
+  cursor: pointer;
+}
+
+.dropdown-service i {
+  width: 5.5rem;
+  height: 5.5rem;
+
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  margin-right: 2rem;
+  align-items: center;
+  font-size: 2.5rem;
+  color: #fff;
+
+  transition: transform 0.3s;
+}
+
+.dropdown-service:hover i {
+  transform: scale(1.1);
+}
+
+.dropdown-service:nth-child(1) i {
+  background: linear-gradient(to right, #b150f1, #7e23da);
+  box-shadow: 0 .5rem 2rem rgba(126, 35, 218, 0.3);
+}
+
+.dropdown-service:nth-child(2) i {
+  background: linear-gradient(to right, #31dca1, #23d683);
+  box-shadow: 0 .5rem 2rem rgba(35, 214, 131, 0.3);
+}
+
+.dropdown-service:nth-child(3) i {
+  background: linear-gradient(to right, #3f51ec, #2d2dcf);
+  box-shadow: 0 .5rem 2rem rgba(45, 45, 207, 0.3);
+}
+
+.dropdown-service:nth-child(4) i {
+  background: linear-gradient(to right, #00d3e0, #03b4d8);
+  box-shadow: 0 .5rem 2rem rgba(3, 180, 216, 0.3);
+}
+
+.dropdown-service:nth-child(5) i {
+  background: linear-gradient(to right, #ff9625, #fa751c);
+  box-shadow: 0 .5rem 2rem rgba(250, 117, 28, 0.3);
+}
+
+.dropdown-service:nth-child(6) i {
+  background: linear-gradient(to right, #3293ff, #2371ff);
+  box-shadow: 0 .5rem 2rem rgba(35, 113, 255, 0.3);
+}
+
+.dropdown-service:nth-child(7) i {
+  background: linear-gradient(to right, #282c35, #20252c);
+  box-shadow: 0 .5rem 2rem rgba(32, 37, 44, 0.3);
+}
+
+.dropdown-service-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.dropdown-service-item span {
+  font-size: 1.6rem;
+}
+
+.dropdown-service-item span:nth-child(1) {
+  font-family: "Mooli", cursive;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+}
+
+.dropdown-service:nth-child(1) .dropdown-service-item span:nth-child(1) {
+  color: #b150f1;
+}
+
+.dropdown-service:nth-child(2) .dropdown-service-item span:nth-child(1) {
+  color: #31dca1;
+}
+
+.dropdown-service:nth-child(3) .dropdown-service-item span:nth-child(1) {
+  color: #3f51ec;
+}
+
+.dropdown-service:nth-child(4) .dropdown-service-item span:nth-child(1) {
+  color: #00d3e0;
+}
+
+.dropdown-service:nth-child(5) .dropdown-service-item span:nth-child(1) {
+  color: #ff9626;
+}
+
+.dropdown-service:nth-child(6) .dropdown-service-item span:nth-child(1) {
+  color: #3293ff;
+}
+
+.dropdown-service:nth-child(7) .dropdown-service-item span:nth-child(1) {
+  color: #282c28;
+}
+
+.dropdown-service-item span:nth-child(2) {
+  font-weight: 300;
+  color: #6a6f72;
+}
+
+.dropdown-1-right button {
+  width: 100%;
+  height: 4rem;
+  background-color: #3776ff;
+  border: none;
+  border-radius: 2rem;
+  font-size: 1.4rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: .1rem;
+  cursor: pointer;
 }
 
 .nav-btn {
