Creating html and styling the third  navigation drop down

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -88,6 +88,26 @@ header {
   position: relative;
 }
 
+/* Triangle part in the dropdown pointing to the nav home */
+.nav-item::after {
+  content: '';
+  position: absolute;
+  top: 2.9rem;
+  left: 50%;
+  transform: translateX(-50%);
+  border-left: 2rem solid transparent;
+  border-right: 2rem solid transparent;
+  border-bottom: 2rem solid #fff;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.nav-item:hover::after {
+  opacity: 1;
+  visibility: visible;
+}
+
 .nav-link {
   font-size: 2rem;
   text-transform: uppercase;
@@ -97,17 +117,28 @@ header {
 }
 
 /* Dropdown 1*/
-.dropdown-1 {
+.dropdown {
   position: absolute;
   top: 4.9rem;
-  left: -24rem;
   background-color: #fff;
-  width: 96rem;
-  height: 60rem;
-  display: flex;
   border-radius: 1rem;
   box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
   padding: 2rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.nav-item:hover .dropdown{
+  opacity: 1;
+  visibility: visible;
+}
+
+.dropdown-1 {
+  left: -24rem;
+  width: 96rem;
+  height: 60rem;
+  display: flex;
 }
 
 .dropdown-1-left {
@@ -284,6 +315,80 @@ border-bottom: .2rem solid rgba(134, 152, 167, 0.5);
   cursor: pointer;
 }
 
+/* Dropdown 2 */
+.dropdown-2 {
+  width: 90rem;
+  height: 37rem;
+  left: -27rem;
+  display: flex;
+}
+
+.clients-item {
+  width: 100%;
+  margin: 0 0.5rem;
+  padding: 0.7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 1rem;
+}
+
+.clients-item:nth-child(1) {
+  background: linear-gradient(135deg, #faf7fe, #ead7ff);
+}
+
+.clients-item:nth-child(2) {
+  background: linear-gradient(135deg, #f2f6ff, #cad9ff);
+}
+
+.clients-item:nth-child(3) {
+  background: linear-gradient(135deg, #f1fdf7, #bfffdf);
+}
+
+.clients-item:nth-child(4) {
+  background: linear-gradient(135deg, #fff4ed, #f8d7c5);
+}
+
+.clients-item i {
+  font-size: 10rem;
+}
+
+.clients-item:nth-child(1) i,
+.clients-item:nth-child(1) h3 {
+  color: #ac63fa;
+}
+
+.clients-item:nth-child(2) i,
+.clients-item:nth-child(2) h3 {
+  color: #1f5bf3;
+}
+
+.clients-item:nth-child(3) i,
+.clients-item:nth-child(3) h3 {
+  color: #1fcf77;
+}
+
+.clients-item:nth-child(4) i,
+.clients-item:nth-child(4) h3 {
+  color: #ff8645;
+}
+
+.clients-item h3 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 3.5rem;
+  margin-bottom: 0.7rem;
+}
+
+.clients-item p {
+  font-size: 1.6rem;
+  font-weight: 300;
+  text-align: center;
+}
+
 .nav-btn {
   width: 13rem;
   height: 5rem;
@@ -347,6 +452,7 @@ border-bottom: .2rem solid rgba(134, 152, 167, 0.5);
 .banner button:hover {
   transform: translateY(-.2rem);
 }
+
 /* Backgrounds */
 .backgrounds div {
   position: absolute;
