--- a/CSS/style.css
+++ b/CSS/style.css
@@ -629,3 +629,156 @@ cursor: pointer;
   opacity: 0.4;
   box-shadow: 7rem 4rem 6rem rgba(0, 0, 0, 0.9);
 }
+
+/* Services */
+.services {
+  width: 100%;
+  height: 170vh;
+  position: relative;
+}
+
+.services-wrapper {
+  width: 60%;
+  background-color: #fff;
+  box-shadow: 0 2rem 6rem rgba(130, 162, 235, 0.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 6rem 0;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.services-wrapper h1 {
+  font-family: "Mooli", cursive;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #394353;
+  letter-spacing: 0.1rem;
+  margin-bottom: 8rem;
+  z-index: 1;
+}
+
+.services-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.service {
+  width: 28rem;
+  height: 35rem;
+  margin: 0 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.service i {
+  width: 10rem;
+  height: 10rem;
+  background-color #fff;
+  box-shadow: 0 1rem 4rem rgba(75, 119, 221, 0.15);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  margin-bottom: 2rem;
+}
+
+.service:nth-child(1) i {
+  background: linear-gradient(#fff, #1259dd 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(2) i {
+  background: linear-gradient(#fff, #fa751c 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(3) i {
+  background: linear-gradient(#fff, #3293ff 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(4) i {
+  background: linear-gradient(#fff, #31dca1 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(5) i {
+  background: linear-gradient(#fff, #4400ab 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(6) i {
+  background: linear-gradient(#fff, #ff4800 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(7) i {
+  background: linear-gradient(#fff, #ff26ac 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(8) i {
+  background: linear-gradient(#fff, #00d1e0 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service:nth-child(9) i {
+  background: linear-gradient(#fff, #b600e4 60%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.service h3 {
+  font-family: "Croissant One", cursive;
+  font-size: 2rem;
+  color: #5e728f;
+  margin: 2rem 0;
+}
+
+.service p {
+  font-size: 1.6rem;
+  text-align: center;
+  color: #889cb9;
+}
+
+.services-bg-1 {
+  width: 80rem;
+  height: 80rem;
+  background: linear-gradient(to right, transparent, transparent, #ff43a7);
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 10%;
+  opacity: .3;
+}
+
+
+.services-bg-2 {
+  width: 80rem;
+  height: 80rem;
+  background: linear-gradient(to left, transparent, transparent, #74b5ff);
+  border-radius: 15rem;
+  position: absolute;
+  bottom: 5%;
+  right: 12%;
+  opacity: .3;
+  transform: rotateZ(-10deg);
+}
