--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1088,3 +1088,76 @@ cursor: pointer;
 }
 
 /* Video */
+.video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(227, 242, 253, 0.9);
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video {
+  width: 90rem;
+  height: auto;
+  position: relative;
+}
+
+.controls-wrapper {
+ width: 100%;
+ position: absolute;
+ left: 0;
+ bottom: -5.5rem;
+}
+
+.video-timeline {
+  position: absolute;
+  width: 100%;
+  height: 0.7rem;
+  cursor: pointer;
+}
+
+.progress-area {
+  height: .3rem;
+  background-color: rgba(255, 255, 255, 0.6);
+  position: relative;
+}
+
+.progress-area span {
+  position: absolute;
+  top: -2.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #333;
+  font-size: 1.3rem;
+}
+
+.progress-bar {
+  width: 50%;
+  height: 100%;
+  background-color: #2289ff;
+  position: relative;
+}
+
+.progress-bar::before {
+  content: '';
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  background-color: #2289ff;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 1rem 10rem rgba(20, 52, 129, 0.7);
+
+}
