--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1145,7 +1145,7 @@ cursor: pointer;
 }
 
 .progress-bar {
-  width: 50%;
+  width: 0;
   height: 100%;
   background-color: #2289ff;
   position: relative;
@@ -1159,7 +1159,7 @@ cursor: pointer;
   background-color: #2289ff;
   position: absolute;
   top: 50%;
-  right: 0;
+  right: -1.3rem;
   transform: translateY(-50%);
 }
 
