--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,6 +12,19 @@ html {
   font-size: 62.5%;
 }
 
+/* Custom Scroll Bar */
+body::-webkit-scrollbar {
+  width: 1.5rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: linear-gradient(#8430ea, #bb5ef5);
+}
+
+body::-webkit-scrollbar-track {
+  background-color: #fff;
+}
+
 /* Container */
 .container {
   width: 100%;
