customizing navbar for clients page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,6 +99,16 @@ header {
   text-shadow: none;
 }
 
+.multi-page-nav .logo span {
+  color: #092627;
+  text-shadow: none;
+}
+
+.multi-page-nav .nav-link {
+  color: #092627;
+  text-shadow: none;
+}
+
 /* Nav Items */
 .nav-items {
   width: 50%;
@@ -170,6 +180,11 @@ header {
 .sticky .dropdown {
   top: 8rem;
   box-shadow: 0 1rem 10rem rgba(130, 162, 235, 0.4);
+}
+
+.multi-page-nav .nav-items .dropdown {
+  box-shadow: 0 1rem 10rem rgba(130,162,235, 0.4);
+  
 }
 
 .dropdown-1 {
@@ -589,6 +604,14 @@ cursor: pointer;
   box-shadow: none;
   color: #fff;
 }
+
+.multi-page-nav .nav-item .nav-btn {
+  background: linear-gradient(to right, #ff45b9, #ff3598);
+  color: #fff;
+  box-shadow: none;
+}
+
+
 /* Banner */
 .banner {
   position: absolute;
