--- a/CSS/products.css
+++ b/CSS/products.css
@@ -116,3 +116,140 @@ body::-webkit-scrollbar-thumb {
   bottom: 20%;
   right: 3%;
 }
+
+.products-promo {
+  width: 100%;
+  height: 150vh;
+  position: relative;
+  perspective: 50rem;
+  transition: all 0.3s;
+}
+
+.animate.products-promo {
+  background-color: rgba(10, 59, 156, 0.7);
+}
+
+.promo-rectangle {
+  width: 60rem;
+  height: 60rem;
+  background: linear-gradient(135deg, #184fbb, transparent 80%);
+  position: absolute;
+  top: 25%;
+  left: 10%;
+  border-radius: 10rem;
+  transform: rotateZ(45deg);
+  opacity: 0.2;
+  transition: all 0.3s;
+}
+
+.animate .promo-rectangle {
+  opacity: .8;
+  transform: rotateZ(45deg)scale(1.4);
+}
+
+.small-circle {
+  width: 4rem;
+  height: 4rem;
+  background-color: #ffad00;
+  border-radius: 50%;
+  position: absolute;
+  top: 20%;
+  right: 40%;
+  opacity: 0.7;
+  transition: all 0.3s;
+}
+
+.animate .small-circle {
+  opacity: 1;
+  transform: scale(1.4);
+}
+
+.large-circle {
+  width: 50rem;
+  height: 50rem;
+  background-color: #34dc87;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 25%;
+  right: 12%;
+  transition: all 0.3s;
+}
+
+.animate .large-circle {
+  transform: scale(1.4);
+}
+
+.promo-content {
+  width: 60%;
+  height: 45rem;
+  background: linear-gradient(to right, #184fbb, #13036d);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 1.5rem;
+  padding: 0 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transition: all 0.5s;
+}
+
+.promo-content:hover {
+  transform: translate(-50%, -50%) translateZ(10rem);
+}
+
+.promo-content h1 {
+  font-family: 'Mooli', cursive;
+  font-size: 4rem;
+  letter-spacing: .2rem;
+  text-transform: capitalize;
+  color: #fff;
+}
+
+.promo-content button {
+  width: 25rem;
+  height: 6rem;
+  background-color: #34dc87;
+  margin: 7rem 0 5rem 0;
+  border: none;
+  border-radius: 5rem;
+  font-size: 2rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+}
+
+.promo-content p {
+  font-size: 2.5rem;
+  font-weight: 300;
+  color: #fff;
+  text-transform: capitalize;
+  letter-spacing: 0.1rem;
+}
+
+.promo-shadow {
+  width: 90%;
+  height: 10rem;
+  background-color: #052b5c;
+  position: absolute;
+  bottom: -12%;
+  border-radius: 10rem;
+  transform: rotateX(20deg);
+  filter: blur(3rem);
+  opacity: 0.7rem;
+  transition: all 0.3s;
+}
+
+.animate .promo-shadow {
+  height: 13em;
+  bottom: -15%;
+  filter: blur(2.5rem);
+  opacity: 0.9;
+}
