--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -51,3 +51,56 @@ body::-webkit-scrollbar-thumb {
   right: 15%;
   opacity: .2;
 }
+
+.pricing-header {
+  text-align: center;
+  margin-bottom: 20rem;
+}
+
+.pricing-header h1 {
+  font-size: 5rem;
+  letter-spacing: 0.2rem;
+  color: #263b53;
+}
+
+.pricing-header h3 {
+  font-size: 2rem;
+  font-weight: 300;
+  color: #567599;
+  width: 80rem;
+  margin: 2rem auto;
+}
+
+.pricing-header p {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-right: 1rem;
+}
+
+.reviews {
+  display: flex;
+  justify-content: center;
+}
+
+.pricing-stars {
+  margin-right: 1rem;
+}
+
+.pricing-stars span {
+  font-size: 2.5rem;
+  color: #03b57f;
+}
+
+.pricing-trustpilot {
+  display: flex;
+  align-items: center;
+  margin-top: -0.5rem;
+}
+
+.pricing-trustpilot span:nth-child(1) {
+  font-size: 3.5rem;
+  color: #03b57f;
+}
+.pricing-trustpilot span:nth-child(2) {
+  font-size: 2rem;
+}
