--- a/CSS/pricing.css
+++ b/CSS/pricing.css
@@ -206,3 +206,15 @@ body::-webkit-scrollbar-thumb {
 .pricing-card-right .pricing-card-btn{
   background: linear-gradient(to right, #ca6eff, #7118d6 90%);
 }
+
+/* Responsive */
+@media (max-width: ) {
+  .pricing-small-circle {
+    right: 10%;
+  }
+
+  .pricing-large-circle {
+    right: 10%;
+    bottom: 12%;
+  }
+}
