Added media queries for smaller screens(1440px) responsiveness

--- a/CSS/clients.css
+++ b/CSS/clients.css
@@ -123,3 +123,13 @@ body::-webkit-scrollbar-thumb {
     width: 90%;
   }
 }
+
+@media (max-width: 1440px) {
+  .testimonials-wrapper {
+    width: 95%;
+  }
+
+  .testimonial {
+    width: 32rem;
+  }
+}
