--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1741,3 +1741,101 @@ footer {
     bottom: 10%;
   }
 }
+
+
+@media (max-width: 820px) {
+  .navbar {
+    background-color: #fff;
+  }
+
+  .navbar .logo span {
+    color: #ff4ea0;
+    text-shadow: none;
+  }
+
+  .nav-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: absolute;
+    top: 12rem;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 12rem);
+    background-color: #f2f4f5;
+  }
+
+  .nav-item:not(:last-child) {
+    width: 100%;
+    height: 12rem;
+    display: flex;
+    align-items: center;
+    padding-left: 3rem;
+  }
+
+  .nav-item:not(:last-child)::before {
+  content: '+';
+  font-size: 4rem;
+  color: #ff4ea0;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  width: 10rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
+  .nav-item:last-child {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 12rem;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 1rem 10rem rgba(130, 162, 235, 0.2);
+  }
+
+  .nav-btn {
+    width: 95%;
+    height: 6rem;
+    background-color: #ff4ea0;
+    color: #fff;
+    font-size: 2.2rem;
+  }
+  .nav-item a:not(.nav-btn) {
+    color: #092627;
+    text-shadow: none;
+  }
+
+  .menu-icon {
+    width: 4rem;
+    height: 2rem;
+    position: absolute;
+    top: 5rem;
+    right: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .line {
+    width: 100%;
+    height: 0.4rem;
+    background-color: #ff4ea0;
+  }
+
+  .line-1 {
+    transform: rotate(45deg) translateY(1.2rem);
+  }
+
+  .line-2 {
+    transform: rotate(-45deg) translateY(-1.2rem);
+  }
+}
