styled the dropdown menus inside the hamburger menu

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1802,6 +1802,15 @@ footer {
     box-shadow: 0 1rem 10rem rgba(130, 162, 235, 0.2);
   }
 
+  .nav-item::after {
+    display: none;
+  }
+
+  .nav-item a:not(.nav-btn) {
+    color: #092627;
+    text-shadow: none;
+  }
+
   .nav-btn {
     width: 95%;
     height: 6rem;
@@ -1809,9 +1818,59 @@ footer {
     color: #fff;
     font-size: 2.2rem;
   }
-  .nav-item a:not(.nav-btn) {
-    color: #092627;
-    text-shadow: none;
+
+  .dropdown-1 {
+    left: 0;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .dropdown-1,
+  .dropdown-2,
+  .dropdown-3,
+  .dropdown-4,
+  .dropdown-5 {
+    width: 100%;
+    top: 12rem;
+    z-index: 100;
+    border-radius: 0;
+    box-shadow: none;
+  }
+
+  .dropdown-1-left {
+    width: 100%;
+    height: 50%;
+    margin-bottom: 5rem;
+    padding: 2rem;
+  }
+
+  .features-list, .dropdown-services {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .dropdown-1-right {
+    width: 100%;
+    height: 75%;
+    padding: 0 2rem 13rem 2rem;
+    background-color: #fff;
+  }
+
+  .dropdown-2 {
+    height: auto;
+    left: 0;
+    padding: 2rem 2rem 0 2rem;
+  }
+
+  .dropdown-2 div {
+    margin: 0 0.5rem 2rem 0.5rem;
+  }
+
+  .dropdown-2 div i{
+    font-size: 5rem;
   }
 
   .menu-icon {
