--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1744,16 +1744,20 @@ footer {
 
 
 @media (max-width: 820px) {
-  .navbar {
+  .hamburger.navbar {
     background-color: #fff;
   }
 
-  .navbar .logo span {
+  .hamburger.navbar .logo span {
     color: #ff4ea0;
     text-shadow: none;
   }
 
   .nav-items {
+    display: none;
+  }
+
+  .hamburger .nav-items {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -1766,7 +1770,7 @@ footer {
     background-color: #f2f4f5;
   }
 
-  .nav-item:not(:last-child) {
+  .hamburger .nav-item:not(:last-child) {
     width: 100%;
     height: 12rem;
     display: flex;
@@ -1789,6 +1793,10 @@ footer {
   align-items: center;
   }
 
+  .nav-item.show::before {
+    content: '-';
+  }
+
   .nav-item:last-child {
     position: absolute;
     bottom: 0;
@@ -1806,7 +1814,7 @@ footer {
     display: none;
   }
 
-  .nav-item a:not(.nav-btn) {
+  .hamburger .nav-item a:not(.nav-btn) {
     color: #092627;
     text-shadow: none;
   }
@@ -1817,6 +1825,21 @@ footer {
     background-color: #ff4ea0;
     color: #fff;
     font-size: 2.2rem;
+  }
+
+  .dropdown {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .nav-item:hover .dropdown {
+    opacity: 0;
+    visibility: hidden;
+  }
+
+  .nav-item.show .dropdown {
+    opacity: 1;
+    visibility: visible;
   }
 
   .dropdown-1 {
@@ -1862,6 +1885,7 @@ footer {
   .dropdown-2 {
     height: auto;
     left: 0;
+    flex-direction: column;
     padding: 2rem 2rem 0 2rem;
   }
 
@@ -1882,19 +1906,34 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    transition: all 0.3s;
+  }
+
+  .position.menu-icon {
+    top: 4rem;
+    transform: translateY(-50%);
   }
 
   .line {
     width: 100%;
     height: 0.4rem;
+    background-color: #fff;
+    transition: transform 0.3s ease;
+  }
+
+  .navbar.sticky .line {
+    background-color: #092627;
+  }
+
+  .hamburger .line {
     background-color: #ff4ea0;
   }
 
-  .line-1 {
+  .hamburger .line-1 {
     transform: rotate(45deg) translateY(1.2rem);
   }
 
-  .line-2 {
+  .hamburger .line-2 {
     transform: rotate(-45deg) translateY(-1.2rem);
   }
 }
